# ComfyUI-SeedVR2_VideoUpscaler

./: .gitignore  README.md  VRAM_OPTIMIZATIONS_SUMMARY.md  __init__.py  inference_cli.py  neg_emb.pt  pos_emb.pt  pyproject.toml  requirements.txt  seedvr2.py
.github/workflows/: publish.yml
common/: config.py  half_precision_fixes.py
common/diffusion/: config.py
common/distributed/: advanced.py  meta_init_utils.py
configs_3b/: main.yaml
configs_7b/: main.yaml
data/image/transforms/: divisible_crop.py  na_resize.py
data/video/transforms/: rearrange.py
example_workflows/: SeedVR2_Image_Upscaling.json  SeedVR2_Video_Upscaling.json
models/dit/: attention.py  nadit.py  rope.py
models/dit/blocks/: mmdit_window_block.py
models/dit/nablocks/: mmsr_block.py
models/dit_v2/: attention.py  modulation.py  normalization.py  rope.py
models/dit_v2/nablocks/: mmsr_block.py
models/dit_v2/nablocks/attention/: mmattn.py
models/video_vae_v3/: s8_c16_t4_inflation_sd3.yaml
models/video_vae_v3/modules/: attn_video_vae.py  causal_inflation_lib.py  context_parallel_lib.py  inflated_lib.py  video_vae.py
nodes/: seedvr2.py
projects/video_diffusion_sr/: color_fix.py  infer.py  utils.py
src/: __init__.py
src/common/: decorators.py
src/common/diffusion/samplers/: euler.py
src/common/diffusion/timesteps/sampling/: trailing.py
src/common/distributed/: basic.py  ops.py
src/core/: __init__.py  generation.py  infer.py  model_manager.py
src/data/image/transforms/: area_resize.py  na_resize.py  side_resize.py
src/interfaces/: __init__.py  comfyui_node.py
src/models/dit/: attention.py  embedding.py  modulation.py  na.py  normalization.py  rope.py
src/models/dit/nablocks/: mmsr_block.py
src/models/dit_v2/: modulation.py  nadit.py  normalization.py  rope.py
src/models/dit_v2/nablocks/attention/: mmattn.py
src/models/video_vae_v3/modules/: attn_video_vae.py  causal_inflation_lib.py
src/models/video_vae_v3_mine_bad/modules/: attn_video_vae.py  causal_inflation_lib.py
src/optimization/: __init__.py  blockswap.py  compatibility.py  memory_manager.py  performance.py
src/utils/: __init__.py  color_fix.py  constants.py  debug.py  downloads.py  model_registry.py
